Move away of deprecated Integer/Long constructors.
Deprecated in Java 9 and better(caching) valueOf method exists since
1.5.

Change-Id: I0e0a6f6b48c1ecaa1627b7775ede5627ec41a775
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>