@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2004, 2009 IBM Corporation and others.
+ * Copyright (c) 2004, 2018 IBM Corporation and others.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -68,7 +68,7 @@ public abstract class RegistryObject implements KeyedElement {
 
 	@Override
 	public Object getKey() {
-		return new Integer(objectId);
+		return Integer.valueOf(objectId);
 	}
 
 	@Override
